.provarCaches/00D410000011HE0EAM/objects/rstk__sopctq__c.object
<CustomObject>
    <description>sopctq__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sopctq_sopct__r.rstk__externalid__c &amp;&apos;_&apos;&amp;  TEXT(rstk__sopctq_frqty__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sopctq_sopct__r.Name &amp;&apos;_&apos;&amp;  TEXT(rstk__sopctq_frqty__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopctq_frqty__c</fullName>
        <inlineHelpText>Grid</inlineHelpText>
        <label>From Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopctq_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Grid</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopctq_sopct__c</fullName>
        <inlineHelpText>Grid</inlineHelpText>
        <label>Customer Product Price by Date</label>
        <referenceTo>rstk__sopct__c</referenceTo>
        <relationshipLabel>Customer Products Price by Date and Qty</relationshipLabel>
        <relationshipName>sopctqs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sopctq_toqty__c</fullName>
        <inlineHelpText>Grid</inlineHelpText>
        <label>To Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Product Price by Date and Qty</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Products Price by Date and Qty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__From_Quantity</fullName>
        <active>true</active>
        <description>From Quantity is Required , not Modifiable and  must be greater than zero.</description>
        <errorConditionFormula>ISBLANK(rstk__sopctq_frqty__c) || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__sopctq_frqty__c) ) || rstk__sopctq_frqty__c &lt;= 0</errorConditionFormula>
        <errorMessage>From Quantity is Required , not Modifiable and  must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Price</fullName>
        <active>true</active>
        <description>Price cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK(rstk__sopctq_price__c)  &amp;&amp; rstk__sopctq_price__c &lt; 0</errorConditionFormula>
        <errorMessage>Price cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Thru_Quantity</fullName>
        <active>true</active>
        <description>Thru Quantity is Required and must be greater than zero and From Quantity.</description>
        <errorConditionFormula>ISBLANK(rstk__sopctq_toqty__c) || rstk__sopctq_toqty__c &lt;= 0 || (! ISBLANK(rstk__sopctq_frqty__c) &amp;&amp; rstk__sopctq_toqty__c &lt; rstk__sopctq_frqty__c)</errorConditionFormula>
        <errorMessage>Thru Quantity is Required and must be greater than zero and From Quantity.</errorMessage>
    </validationRules>
</CustomObject>